debezium/dbz#1533 Improve incremental snapshot error handling
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>